Almost done. Awaiting final results

--- a/docs/content/abstract.tex
+++ b/docs/content/abstract.tex
@@ -1,1 +1,1 @@
-The paper documents my work on the in-class Kaggle Challenge; 'AU-ENG-CVML2019'. The paper is a mandatory submission in the Computer Vision and Machine Learning 2019 course at Aarhus University. The machine learning challenge is to obtain better classification result on th FIN-Benthic dataset of 29 classes of aquatic macroinvertebrates. The paper explains the dataset and a way to augment the dataset to gain better results. Furthermore the paper describes the machine learning methods used and the results.
+This paper documents my work on the in-class Kaggle Challenge; 'AU-ENG-CVML2019'. It is a mandatory submission in the Computer Vision and Machine Learning 2019 course at Aarhus University. The machine learning challenge is to obtain decent classification result on th FIN-Benthic data set consisting of 29 classes of aquatic macroinvertebrates. The paper explains the data set and a way to augment the data set to obtain better results. Furthermore the paper describes the machine learning methods used and the results.
