--- a/docs/content/dataset.tex
+++ b/docs/content/dataset.tex
@@ -1,4 +1,4 @@
-The FIN-Benthic \cite{finbenthic} dataset 2 are used in this paper. The dataset consists of 29 different classes of aquatic macroinvertebrates. 
+The FIN-Benthic \cite{finbenthic} data set 2 are used in this paper. The data set consists of 29 different classes of aquatic macroinvertebrates. 
 
 \begin{figure}[H]
     \centering
@@ -6,8 +6,8 @@ The FIN-Benthic \cite{finbenthic} dataset 2 are used in this paper. The dataset 
     \caption{Example of aquatic macroinvertebrates}
 \end{figure}
 
-The datset counts 11,588 images divided into training set (5830 images), validation set (2298 images) and test set (3460 images). The training and validation set are annotated with class labels, whereas the test set are not. This paper is a part of a Kaggle\footnote{Kaggle is an online community of data scientists and machine learners. Red more: https://www.kaggle.com/getting-started/44916}Challenge with the aim of getting the best classification score on the test set, that are evaluated on Kaggle. For the challenge feature vectors produced by an AlexNet\cite{Krizhevsky:2012} trained on the raw images. The features are the output of the last convolutional layer and flattened into a one-dimnesional vector with 4096 features. All images and vectors comes in pairs of images of the same bug taken form perpendicular angles, an attempt to take advantage of the systematic series the images are all images vertically stacked. If we have a pair of $x_1$ and $x_2$, then $x_1$ and $x_2$ are stacked as a combination of the two; 
+The data set counts 11,588 images divided into training set (5830 images), validation set (2298 images) and test set (3460 images). The training and validation set are annotated with class labels, whereas the test set are not. This paper is a part of a Kaggle\footnote{Kaggle is an online community of data scientists and machine learners. Red more: https://www.kaggle.com/getting-started/44916}Challenge with the aim of getting the best classification score on the test set, that are evaluated on Kaggle. For the challenge feature vectors produced by an AlexNet\cite{Krizhevsky:2012} trained on the raw images. The features are the output of the last convolutional layer and flattened into a one-dimensional vector with 4096 features. All images and vectors comes in pairs of images of the same bug taken form perpendicular angles, an attempt to take advantage of the systematic series the images are all images vertically stacked. If we have a pair of $x_1$ and $x_2$, then $x_1$ and $x_2$ are stacked as a combination of the two; 
 
 $$x_1=\begin{bmatrix} x_{1} \\ x_{2} \\ \end{bmatrix}, x_2 = \begin{bmatrix} x_{2} \\ x_{1} \\ \end{bmatrix}$$
 
-The vectors now contains $2 \times 4096 = 8192$ features. The concatenated version of the dataset are referred to as FIN-Benthic-Concatenated. Futhermore the training and validation sets are merged to form a combined set, to enable Cross-Validation for the different classification algorithms tested in this paper. Cross-Validation and Machine Learning methods used are described in the next section.
+The vectors now contains $2 \times 4096 = 8192$ features. The concatenated version of the data set are referred to as FIN-Benthic-Concatenated. Futhermore the training and validation sets are merged to form a combined set, to enable Cross-Validation for the different classification algorithms tested in this paper. Cross-Validation and Machine Learning methods used are described in the next section.
