--- a/docs/_tex/preamble.tex
+++ b/docs/_tex/preamble.tex
@@ -29,7 +29,7 @@
 \pagestyle{fancy} % All pages have headers and footers
 \fancyhead{} % Blank out the default header
 \fancyfoot{} % Blank out the default footer
-\fancyhead[C]{Optimization and Data Analytics $\bullet$ Fall 2018 $\bullet$ Aarhus University} % Custom header text
+\fancyhead[C]{Computer Vision and Machine Learning $\bullet$ Spring 2019 $\bullet$ Aarhus University} % Custom header text
 \fancyfoot[RO,LE]{\thepage} % Custom footer text
 
 \usepackage{titling} % Customizing the title section
