--- a/docs/content/bibliography.bib
+++ b/docs/content/bibliography.bib
@@ -147,3 +147,103 @@ month = {04},
 pages = {250},
 title = {CYBERNETIC PREDICTING DEVICES}
 }
+
+@article{SzegedyIV16,
+  author    = {Christian Szegedy and
+               Sergey Ioffe and
+               Vincent Vanhoucke},
+  title     = {Inception-v4, Inception-ResNet and the Impact of Residual Connections
+               on Learning},
+  journal   = {CoRR},
+  volume    = {abs/1602.07261},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1602.07261},
+  archivePrefix = {arXiv},
+  eprint    = {1602.07261},
+  timestamp = {Mon, 13 Aug 2018 16:48:39 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/SzegedyIV16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{chollet2015keras,
+  title={Keras},
+  author={Chollet, Fran\c{c}ois and others},
+  year={2015},
+  howpublished={\url{https://keras.io}},
+}
+
+@misc{chollet, 
+  title={Keras Applications}, 
+  url={https://keras.io/applications/#inceptionresnetv2}, 
+  journal={Applications - Keras Documentation}, 
+  author={Chollet, Fran\c{c}ois}
+}
+
+@misc{tensorflow2015-whitepaper,
+title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
+url={https://www.tensorflow.org/},
+note={Software available from tensorflow.org},
+author={
+    Mart\'{\i}n~Abadi and
+    Ashish~Agarwal and
+    Paul~Barham and
+    Eugene~Brevdo and
+    Zhifeng~Chen and
+    Craig~Citro and
+    Greg~S.~Corrado and
+    Andy~Davis and
+    Jeffrey~Dean and
+    Matthieu~Devin and
+    Sanjay~Ghemawat and
+    Ian~Goodfellow and
+    Andrew~Harp and
+    Geoffrey~Irving and
+    Michael~Isard and
+    Yangqing Jia and
+    Rafal~Jozefowicz and
+    Lukasz~Kaiser and
+    Manjunath~Kudlur and
+    Josh~Levenberg and
+    Dandelion~Man\'{e} and
+    Rajat~Monga and
+    Sherry~Moore and
+    Derek~Murray and
+    Chris~Olah and
+    Mike~Schuster and
+    Jonathon~Shlens and
+    Benoit~Steiner and
+    Ilya~Sutskever and
+    Kunal~Talwar and
+    Paul~Tucker and
+    Vincent~Vanhoucke and
+    Vijay~Vasudevan and
+    Fernanda~Vi\'{e}gas and
+    Oriol~Vinyals and
+    Pete~Warden and
+    Martin~Wattenberg and
+    Martin~Wicke and
+    Yuan~Yu and
+    Xiaoqiang~Zheng},
+  year={2015},
+}
+
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
+
+@misc{karpathy-convnet, 
+  title={Convolutional Networks}, 
+  url={http://cs231n.github.io/convolutional-networks/}, 
+  journal={CS231n Convolutional Neural Networks for Visual Recognition}, 
+  author={Karpathy, Andrej}
+}
+
+
